Changes Log
==========================================================================

Version 1.1 - Date 09/11/2018

  * Fixed syntax error introduced in 1.0 thanks to @MarcelFox
  * Fixed issue #36 (cron file created incorrectly).
  * Added cron job deprecation warning, daemon mode should be used instead.
  * Fixed many issues reported by shellcheck.
  * Added IPv6 support to ban_incoming_and_outgoing
    (ban_only_incoming should be next).
  * Use ss instead of netstat.
  * started some drafting to add blocking by port support.

Version 1.0 - Date 06/11/2018

  * Support for ip ranges (CIDR) on the ignore.ip.list thanks to
    safly (https://github.com/safly)
  * grepcidr install requirement introduced with the support for CIDR
  * New syntax supported on ignore.ip.list
       a.b.c.d/xy        (CIDR format)
       a.b.c.d-e.f.g.h   (IP range)
    For more details read the grepcidr man page.
  * Fixed bug $CONF not found thanks to
    WoozyMasta (https://github.com/WoozyMasta)
  * Added unban flag -u --unban
  * Added logrotate configuration file to uninstall script.
  * Prioritize systemd detection on install script.

Version 0.9 - Date 05/03/2017

  * Support for freebsd and many other improvements thanks to
    Marc S. Brook (https://github.com/nuxy)
  * Added option to only block incoming connections thanks to
    Fathardie (https://github.com/Fathardie)
  * Optional automatic installation of dependencies on the install script
    thanks to gloomy-ghost (https://github.com/gloomy-ghost)
  * Some other fixes and improvements thanks to
    mean-cj (https://github.com/mean-cj)


Version 0.8 - Date 25/09/2015

  * Use a separate bans list file instead of reusing the ignore
    whitelisted file which is more secure on case of unexpected
    system reboot.
  * Added default settings to ddos script.
  * Added --bans-list|-b option to view currently banned ip's.
  * Added check for missing dependencies on installer script.