@@ -54,11 +54,7 @@ BAN_PERIOD=600
 # by default it blocks all states except for listening and closed
 CONN_STATES="connected"
 
-# Only check on the incoming connections to test which to ban (currently only filters ipv4, ipv6 are still check
-# on outgoing and incoming connections)
+# Only count incoming connections to listening services, which will
+# prevent the server from banning multiple outgoing connections to
+# a single ip address.
 ONLY_INCOMING=false
-
-# The external ipv4 address. Used to rewrite the 0.0.0.0 address to the HOST_IP. Any incoming connections
-# on a 0.0.0.0 socket is shown as connected to the external interface. If you have only one internet connection,
-# enter your machine's ip here.
-HOST_IP="0.0.0.0"
