@@ -1,7 +1,7 @@
 /*dependencies      apt-get             yum               pkg*/
 nslookup            dnsutils            bind-utils        bind-tools
-netstat|ifconfig    net-tools           net-tools         net-tools
-iptables            iptables-persistent iptables-services ipfw
+ifconfig            net-tools           net-tools         net-tools
+iptables|ip6tables  iptables-persistent iptables-services ipfw
 tcpkill             dsniff              dsniff            dsniff
 timeout             coreutils           coreutils         timeout
 grep                grep                grep              grep
